--- a/qwitter/src/css/quasar.variables.scss
+++ b/qwitter/src/css/quasar.variables.scss
@@ -23,5 +23,4 @@ $negative: #c10015;
 $info: #31ccec;
 $warning: #f2c037;
 
-// Custom variables
-$light-orange: #fdc268;
+$bg-qwitter-dark-sep: #353b4a;
