--- a/qwitter/src/css/quasar.variables.scss
+++ b/qwitter/src/css/quasar.variables.scss
@@ -23,4 +23,8 @@ $negative: #c10015;
 $info: #31ccec;
 $warning: #f2c037;
 
-$bg-qwitter-dark-sep: #353b4a;
+// ----------------------
+// App specific Variables
+// ----------------------
+
+$qwitter-dark-sep: #3a4153;
